--- a/Catalog/www/common/toasts_&_alerts.html
+++ b/Catalog/www/common/toasts_&_alerts.html
@@ -23,27 +23,27 @@
             <h2>Alerts</h2>
 
             <p>A basic alert setting title and text</p>
-            <a href="javascript:;" id="test2">Show Alert</a>
+            <a href="javascript:;" id="alert1">Show Alert</a>
 
             <p>Three custom buttons on this one<br>
                 When the alert is closed, the Web knows which button was clicked.</p>
-            <a href="javascript:;" id="test3">Show Alert</a>
+            <a href="javascript:;" id="alert2">Show Alert</a>
 
-            <p>Same thing but with an anonymous callback.</p>
-            <a href="javascript:;" id="test4">Show Alert</a>
+            <p>Same thing but with a string callback.</p>
+            <a href="javascript:;" id="alert3">Show Alert</a>
 
 
             <p>Large title and content on this one.</p>
-            <a href="javascript:;" id="test7">Show Alert</a>
+            <a href="javascript:;" id="alert4">Show Alert</a>
 
             <p>This one can be dismissed by touching the empty zone around the alert on platforms supporting this feature.</p>
-            <a href="javascript:;" id="test8">Show Alert</a>
+            <a href="javascript:;" id="alert5">Show Alert</a>
         </div>
-
 
         <script type="text/javascript" src="js/zepto.min.js"></script>
         <script type="text/javascript" src="../platform/cobalt.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
+
 
         <script>
 
@@ -80,40 +80,63 @@
                     return false;
                 });
 
-                app.touch('#test2',function(){
-                    cobalt.alert("My Title", "The default button is 'ok'. Is it OK for you?")
+                app.touch('#alert1',function(){
+                    cobalt.alert({
+                        title : "My Title",
+                        message : "The default button is 'ok', . Is it OK for you?"
+                    });
                     return false;
                 });
 
                 var buttons=["Yes", "No", "I'm not sure"];
 
-                app.touch('#test3',function(){
-                    cobalt.alert("Close me!", "You gonna close this alert!", buttons, { callback : function(params){
-                        cobalt.toast("alert closed. Your choice was: "+ buttons[params.index])
-                    }});
+                app.touch('#alert2',function(){
+                    cobalt.alert({
+                        title : "Close me!",
+                        message: "You gonna close this alert!",
+                        buttons : buttons,
+                        callback : function(data){
+                            cobalt.toast("alert closed. Your choice was: "+ buttons[data.index])
+                        }
+                    });
                     return false;
                 });
 
-                window.myApp={
-                    callMeBack:function(params){
-                        cobalt.log('myApp.callMeBack called with params='+params)
-                        cobalt.toast("alert closed. Your choice was: "+ buttons[params.index])
+                window.myObject={
+                    callMeBack:function(data){
+                        cobalt.log('myApp.callMeBack called with data='+data)
+                        cobalt.toast("alert closed. Your choice was: "+ buttons[data.index])
+
                     }
                 }
 
-                app.touch('#test4',function(){
-                    cobalt.alert("Close me!", "You gonna close this alert!", buttons, { callback : 'myApp.callMeBack', alertId:55});
+                app.touch('#alert3',function(){
+                    cobalt.alert({
+                        title : "Close me!",
+                        message: "You gonna close this alert!",
+                        buttons : buttons,
+                        callback : 'myObject.callMeBack'
+                    });
                     return false;
                 });
 
 
-                app.touch('#test7',function(){
-                    cobalt.alert("Do you Lorem?", "But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?", ["Indeed.", "Me !", "..."]);
+                app.touch('#alert4',function(){
+                    cobalt.alert({
+                        title : "Do you Lorem?",
+                        message: "But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?",
+                        buttons : ["Indeed.", "Me !", "..."]
+                    });
                     return false;
                 });
 
-                app.touch('#test8',function(){
-                    cobalt.alert("Optional!", "This one can be dismissed by touching the empty zone around the alert on platforms supporting this feature.", ["Yes", "No"], { cancelable:true });
+                app.touch('#alert5',function(){
+                    cobalt.alert({
+                        title : "Optional!",
+                        message: "This one can be dismissed by touching the empty zone around the alert on platforms supporting this feature.",
+                        buttons : ["Yes", "No"],
+                        cancelable:true
+                    });
                     return false;
                 });
 
