Revert "Updating common files and cobalt.js"
This reverts commit 339ccf218d6b358de1c3fa0f3bf71a6fe8f09763.

--- a/Catalog/www/common/index.html
+++ b/Catalog/www/common/index.html
@@ -75,17 +75,12 @@
 
                     events:{
                         "onBackButtonPressed":function(data, callback){
-                            cobalt.alert({
-                                title : 'Quit ?',
-                                message : "Are you sure you want to quit the app ?",
-                                buttons : ["Yes","No"],
-                                callback:function(data){
-                                    if (data.index===0){
-                                        //allow quitting
-                                        cobalt.sendCallback(callback,{value : true});
-                                    }
+                            cobalt.alert('Quit ?',"Are you sure you want to quit the app ?", ["Yes","No"],{ callback:function(params){
+                                if (params.index===0){
+                                    //allow quitting
+                                    cobalt.sendCallback(callback,{value : true});
                                 }
-                            })
+                            }})
                         }
                     }
                 });
