new navigate usage

--- a/Catalog/www/common/navigation_popToController.html
+++ b/Catalog/www/common/navigation_popToController.html
@@ -10,7 +10,7 @@
         <div class="block">
             <p>Going back to the index file, in one pop animation.</p>
 
-            <a class="pop" href="javascript:;" data-href="index.html" data-classid="default">Pop to index</a>
+            <a class="popTo" href="javascript:;" data-href="index.html" data-classid="default">Pop to index</a>
         </div>
 
 
@@ -23,7 +23,7 @@
 
 
             <p>Going back to a page that doesn't exist.</p>
-            <a class="pop" href="javascript:;" data-href="nowhere.html" data-classid="unknown">Pop nothing</a>
+            <a class="popTo" href="javascript:;" data-href="nowhere.html" data-classid="unknown">Pop nothing</a>
         </div>
 
 
