--- a/Catalog/www/common/navigation_popTo_C.html
+++ b/Catalog/www/common/navigation_popTo_C.html
@@ -14,18 +14,18 @@
             <p>You are on C. <b>now pop to index, A, B or popTo main page</b></p>
 
 
-            <a class="pop" href="javascript:;" data-href="navigation_popTo_A.html" data-classid="pullToRefresh">Pop to A</a>
-            <a class="pop" href="javascript:;" data-href="navigation_popTo_B.html" data-classid="pullToRefresh">Pop to B</a>
-            <a class="pop" href="javascript:;" data-href="index.html" data-classid="default">Pop to index</a>
-            <a class="pop" href="javascript:;" data-href="navigation_popToController.html" data-classid="default">Pop to "popTo main page"</a>
+            <a class="popTo" href="javascript:;" data-href="navigation_popTo_A.html" data-classid="pullToRefresh">Pop to A</a>
+            <a class="popTo" href="javascript:;" data-href="navigation_popTo_B.html" data-classid="pullToRefresh">Pop to B</a>
+            <a class="popTo" href="javascript:;" data-href="index.html" data-classid="default">Pop to index</a>
+            <a class="popTo" href="javascript:;" data-href="navigation_popToController.html" data-classid="default">Pop to "popTo main page"</a>
 
         </div>
 
         <div class="block">
             <p>Or try some weird things</p>
 
-            <a class="pop" href="javascript:;" data-href="navigation_popTo_A.html" data-classid="wrongController">Pop to A page with wrong controller</a>
-            <a class="pop" href="javascript:;" data-href="wrongPage.html" data-classid="pullToRefresh">Pop to existing controller with wrong page</a>
+            <a class="popTo" href="javascript:;" data-href="navigation_popTo_A.html" data-classid="wrongController">Pop to A page with wrong controller</a>
+            <a class="popTo" href="javascript:;" data-href="wrongPage.html" data-classid="pullToRefresh">Pop to existing controller with wrong page</a>
 
 
         </div>
